Style fixes on mobile devices

--- a/src/theme/site/extras/mixins.less
+++ b/src/theme/site/extras/mixins.less
@@ -22,3 +22,7 @@
 .centeredRightArrow(@color: red, @position: right, @position-amount:5%) {
   .centeredArrow(@position:@position, @position-amount: @position-amount);
 }
+
+.centeredTopArrow(@color: red, @position: top, @position-amount:5%) {
+  .centeredArrow(@position:@position, @position-amount: @position-amount);
+}
